--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -17,7 +17,7 @@
     --border-radius-50: 50px;
 }
 
-*::selection {
+::selection {
     color: var(--color-white);
     background-color: var(--color-dark-blue);
 }
@@ -131,7 +131,7 @@ nav {
     list-style: none;
     margin: auto;
     padding: 0;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .nav-link-list li {
@@ -192,7 +192,7 @@ main {
     text-align: center;
 }
 
-.new-art-title, .best-selling-art-title, .seasonal-art-title {
+.new-art-title, .best-selling-art-title, .seasonal-art-title, .create-account-fieldset legend {
     margin: 0 0 1rem 0;
     padding: 0;
     display: block;
@@ -218,9 +218,9 @@ main {
 
 .previous-element-button-container, .next-element-button-container {
     height: 100%;
-    width: 5%;
+    width: auto;
     margin: auto;
-    padding: 0.8rem;
+    padding: 0;
     display: flex;
 }
 
@@ -228,9 +228,9 @@ main {
     height: 100%;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 1em 0.5em ;
     background-color: var(--color-coral);
-    border-style: var(--border-radius-16);
+    border-style: none;
     border-radius: var(--border-radius-16);
     cursor: pointer;
 }
@@ -268,9 +268,7 @@ main {
     min-width: 90%;
     background-color: var(--color-light-grey);
     border-radius: var(--border-radius-24);
-    border-color: var(--color-light-grey);
-    border-width: 1rem;
-    border-style: solid;
+    border: 1rem solid var(--color-light-grey);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -288,9 +286,7 @@ main {
     min-width: 90%;
     background-color: var(--color-coral);
     border-radius: var(--border-radius-24);
-    border-color: var(--color-coral);
-    border-width: 1rem;
-    border-style: solid;
+    border: 1rem solid var(--color-coral);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -308,9 +304,7 @@ main {
     min-width: 90%;
     background-color: var(--color-electric-blue);
     border-radius: var(--border-radius-24);
-    border-color: var(--color-electric-blue);
-    border-width: 1rem;
-    border-style: solid;
+    border: 1rem solid var(--color-electric-blue);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -319,13 +313,16 @@ main {
     perspective: 600px;
 }
 
+
 .art-item {
+    height: auto;
+    width: 17%;
+    max-width: 17%;
+    min-width: 17%;
     align-items: center;
     margin: 0 1%;
     text-align: center;
     padding: 1rem;
-    height: auto;
-    width: 25%;
     background-color: var(--color-white);
     border-style: solid;
     border-color: var(--color-dark-blue);
@@ -333,7 +330,7 @@ main {
 }
 
 .art-item img {
-    height: 8rem;
+    height: 130px;
     width: auto;
     box-shadow: 4px 4px 4px var(--color-darker-blue);
     border-radius: var(--border-radius-16);
@@ -348,9 +345,13 @@ main {
     margin: 1rem 0 0 0;
     padding: 0;
     text-align: justify;
-    font-size: 1rem;
+    font-size: 16.5px;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
+}
+
+.art-desc::first-letter {
+    text-transform: capitalize;
 }
 
 .art-desc:hover {
@@ -359,6 +360,7 @@ main {
     text-decoration-thickness: 0.1rem;
     cursor: pointer;
 }
+
 
 .shipping-info-banner {
     height: 5rem;
@@ -412,9 +414,12 @@ footer {
 
 .footer-links-bar {
     width: 100%;
-    margin: 1.5% auto;
-    padding: 0;
+    margin: auto;
+    padding: 15px;
     background-color: var(--color-white);
+    border-color: var(--color-lighter-blue);
+    border-style: solid;
+    border-width: 2px 0 0 0;
     justify-content: center;
     display: flex;
 }
@@ -516,8 +521,22 @@ footer {
     background-color: var(--color-light-grey);
 }
 
-.instagram-button img, .youtube-button img {
+.youtube-button img {
     height: 65%;
+    width: auto;
+    margin: auto;
+    padding: 0;
+}
+
+.instagram-button a {
+    height: 65%;
+    width: auto;
+    margin: auto;
+    padding: 0;
+}
+
+.instagram-button a img {
+    height: 100%;
     width: auto;
     margin: auto;
     padding: 0;
@@ -529,9 +548,9 @@ footer {
     margin: 0;
     padding: 1rem 1.5rem 1.5rem 0;
     background-color: var(--color-darker-blue);
-    border-top-color: var(--color-lighter-blue);
-    border-top-style: solid;
-    border-top-width: 2px;
+    border-color: var(--color-lighter-blue);
+    border-style: solid;
+    border-width: 2px 0 0 0;
     text-align: right;
     justify-content: right;
     display: flex;
@@ -541,4 +560,159 @@ footer {
     color: var(--color-white);
     font: var(--font-secondary);
     font-size: 1rem;
+}
+
+
+.create-account-section {
+    height: auto;
+    width: 100%;
+    margin: 0;
+    padding: 2%;
+    background: url(image/yarnBackground.png);
+}
+
+.create-account-form {
+    height: auto;
+    width: 30%;
+    max-width: 30%;
+    margin: auto;
+    padding: 0;
+    border-style: none;
+}
+
+.create-account-fieldset {
+    display: block;
+    height: 100%;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: var(--color-white);
+    border-style: solid;
+    border-color: var(--color-dark-blue);
+    border-radius: var(--border-radius-24);
+    border-width: 2.5px;
+    text-align: justify;
+}
+
+.create-account-fieldset legend {
+    text-align: center;
+    margin: auto;
+    border-style: solid;
+    border-color: var(--color-white);
+    border-radius: var(--border-radius-16);
+    border-width: 5px;
+}
+
+.create-account-fieldset legend::before {
+    content: "[";
+}
+
+.create-account-fieldset legend::after {
+    content: "]";
+}
+
+.name-input-container, .email-input-container, .password-input-container, .desc-container, .techniques-options-container,
+.age-range-container {
+    display: block;
+    margin: 15px 5%;
+    padding: 0;
+    height: auto;
+    width: auto;
+    text-align: justify;
+}
+
+.create-account-fieldset label {
+    display: flex;
+    height: auto;
+    width: 100%; 
+    margin: auto;
+    padding: 0;
+    text-align: justify;
+    font-size: 14px;
+    font-family: var(--font-secondary);
+    color: var(--color-dark-blue);
+}
+
+.create-account-fieldset input {
+    display: flex;
+    width: 100%;
+    margin: 5px 0 10px 0;
+    padding: 8px;
+    border: 1.7px solid var(--color-dark-blue);
+    border-radius: var(--border-radius-16);
+    font-size: 12px;
+}
+
+.create-account-fieldset input:hover {
+    box-shadow: 2px 2px 4px var(--color-lighter-blue);
+    cursor: pointer;
+}
+
+.create-account-fieldset input:focus {
+    outline: var(--color-electric-blue);
+    border: 1.7px solid var(--color-electric-blue);
+    border-radius: var(--border-radius-16);
+}
+
+.desc-container textarea {
+    display: block;
+    height: 100px;
+    width: 100%; 
+    margin: 10px 0 0 0;
+    padding: 8px;
+    font-size: 12px;
+    font-family: var(--font-secondary);
+    columns: 50;
+    border: 1.7px solid var(--color-dark-blue);
+    border-radius: var(--border-radius-16);
+    resize: none;
+}
+
+.desc-container textarea:focus {
+    outline: var(--color-electric-blue);
+    border: 1.7px solid var(--color-electric-blue);
+    border-radius: var(--border-radius-16);
+}
+
+.desc-container textarea:hover {
+    box-shadow: 2px 2px 4px var(--color-lighter-blue);
+    cursor: pointer;
+}
+
+.techniques-options-container select {
+    height: auto;
+    width: 100%;
+    margin: 5px 0 0 0;
+    padding: 5px;
+    color: var(--color-darker-blue);
+    border: 2px solid var(--color-dark-blue);
+    border-radius: var(--border-radius-16);
+    font-size: 12px;
+}
+
+.techniques-options-container select:hover {
+    box-shadow: 2px 2px 4px var(--color-lighter-blue);
+    cursor: pointer;
+}
+
+.create-account-form button {
+    display: block;
+    height: auto;
+    width: auto;
+    margin: 20px auto;
+    padding: 10px 30px;
+    text-align: justify;
+    font-size: 16px;
+    font-family: var(--font-secondary);
+    color: var(--color-white);
+    background-color: var(--color-darker-blue);
+    border-style: solid;
+    border-color: var(--color-darker-blue);
+    border-radius: var(--border-radius-16);
+}
+
+.create-account-form button:hover {
+    background-color: var(--color-lighter-blue);
+    border-color: var(--color-lighter-blue);
 }
