--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -1,6 +1,7 @@
 :root {
     --color-white: #FFFFFF;
     --color-light-grey: #d5d5d5;
+    --color-lighter-grey: #f1f1f1;
     --color-darker-blue: #062E32;
     --color-dark-blue: #16464B;
     --color-lighter-blue: #508285;
@@ -9,13 +10,28 @@
     --color-electric-blue: #44D5E5;
     --color-wine-red: #C50000;
 
-    --font-main: "Montserrat", sans-serif;
-    --font-secondary: "Roboto", sans-serif;
+    --font-main: Verdana, sans-serif;
+    --font-secondary: Geneva, sans-serif;
 
+    --border-radius-4: 4px;
+    --border-radius-8: 8px;
     --border-radius-16: 16px;
     --border-radius-24: 24px;
+    --border-radius-32: 32px;
     --border-radius-50: 50px;
 }
+
+/*
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+    src: url("../Fonts/Montserrat.ttf") format('truetype');;
+}
+
+@font-face {
+    font-family: 'Roboto', sans-serif;
+    src: url("../Fonts/Roboto.ttf") format('truetype');
+}
+*/
 
 ::selection {
     color: var(--color-white);
@@ -35,8 +51,6 @@ body {
     width: 100%;
     max-width: 100%;
     min-width: 100%;
-    margin: 0;
-    padding: 0;
     align-items: center;
     justify-items: center;
     overflow-X: hidden;
@@ -51,8 +65,6 @@ header {
     width: 100%;
     height: auto;
     top: 0;
-    margin: 0;
-    padding: 0;
     background-color: var(--color-dark-blue);
     display: block;
     position: sticky;
@@ -60,37 +72,39 @@ header {
 }
 
 nav {
-    height: auto;
-    width: auto;
-    margin: 0;
-    padding: 1.3% 10%;
-    background-color: var(--color-dark-blue);
     display: flex;
     position: relative;
-    justify-content: center;
+    height: auto;
+    width: auto;
+    padding: 1.3% 10%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color: var(--color-dark-blue);
+    
+    justify-content: space-evenly;
 }
 
 .svg-logo {
+    display: inline;
     height: 4.8em;
     width: auto;
     margin: auto auto auto 0;
-    padding: 0;
-    display: inline;
+}
+
+.svg-logo:hover {
+    opacity: 70%;
     cursor: pointer;
 }
 
 .svg-logo img {
     height: 100%;
     width: auto;
-    margin: 0;
-    padding: 0;
 }
 
 .search-button {
     height: 3rem;
     width: 3rem;
     margin: auto 1.5rem auto auto;
-    padding: 0;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
@@ -98,11 +112,10 @@ nav {
 }
 
 .account-button {
+    display: inline;
     height: 3rem;
     width: 3rem;
     margin: auto 1.5rem;
-    padding: 0;
-    display: inline;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
@@ -113,7 +126,6 @@ nav {
     height: 3rem;
     width: 3rem;
     margin: auto 0 auto 1.5rem;
-    padding: 0;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
@@ -124,40 +136,82 @@ nav {
     height: 90%;
     width: auto;
     margin: auto;
-    padding: 0;
     cursor: pointer;
 }
 
 .account-button:hover , .search-button:hover, .cart-button:hover {
-    background-color: var(--color-light-grey);
+    background-color: var(--color-lighter-grey);
 }
 
 .nav-link-list {
+    display: flex;
+    overflow: hidden;
     list-style: none;
     margin: auto;
-    padding: 0;
+    width: auto;
+}
+
+.nav-link-sub-list {
+    display: none;
     overflow: hidden;
+    list-style: none;
+    margin: auto;
+    width: 10rem;
+    max-width: 10rem;
+    min-width: 10rem;
+    background-color: var(--color-white);
+    border-width: 0 1px 1px 1px;
+    border-style: solid;
+    border-color: var(--color-dark-blue);
+    border-radius: var(--border-radius-4);
 }
 
 .nav-link-list li {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
+    display: block;
+}
+
+.nav-link-sub-list li {
+    display: block;
+    background-color: var(--color-white);
+    border-width: 2px 0 0 0;
+    border-style: solid;
+    border-color: var(--color-lighter-grey);
+}
+
+.nav-link-sub-list li:hover {
+    background-color: var(--color-lighter-grey);
+    cursor: pointer;
 }
 
 .nav-link-list li a {
-    margin: auto;
+    display: block;
     padding: 1rem 1.2rem;
-    display: inline-block;
     color: var(--color-white);
     font-size: 1.4rem;
     font-family: var(--font-main);
     cursor: pointer;
 }
 
-.nav-link-list li a:hover {
+.nav-link-sub-list li a {
+    display: inline-block;
+    color: var(--color-dark-blue);
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: var(--font-secondary);
+    cursor: pointer;
+}
+
+.nav-link-list li a:hover, .nav-link-sub-list li a:hover {
     text-decoration: underline;
     text-decoration-thickness: 0.08rem;
+}
+
+li:hover .nav-link-sub-list { /*menú popup que aparece*/
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    z-index: 100;
+    transition: 0.5s all;
 }
 
 .nav-decoration-line {
@@ -173,47 +227,32 @@ nav {
     background-color: var(--color-white);
 }
 
-
-main {
+.new-art, .best-selling-art, .seasonal-art {
     height: auto;
     width: 90%;
     max-width: 90%;
     min-width: 90%;
-    margin: 1rem auto;
-    padding: 0;
-    display: grid;
-    text-align: center;
-}
-
-.best-selling-art, .seasonal-art {
-    height: auto;
-    width: 90%;
-    max-width: 90%;
-    min-width: 90%;
-    margin: 1.2rem auto 1rem auto;
-    padding: 0;
+    margin: 1rem auto 2rem auto;
     display: grid;
     text-align: center;
 }
 
 .new-art-title, .best-selling-art-title, .seasonal-art-title, .create-account-fieldset legend {
-    margin: 0 0 1rem 0;
-    padding: 0;
     display: block;
+    margin: 0 0 1rem 0;
     text-align: center;
     font-size: 1.45rem;
     font-family: var(--font-main);
     color: var(--color-dark-blue);
 }
 
-.new-art-carousel, .best-selling-art-carousel, .seasonal-art-carousel{
+.new-art-carousel, .best-selling-art-carousel, .seasonal-art-carousel {
+    display: flex;
     margin: auto;
-    padding: 0;
     width: 100%;
     height: auto;
     max-width: 100%;
     min-width: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -221,22 +260,19 @@ main {
 }
 
 .previous-element-button-container, .next-element-button-container {
+    display: flex;
     height: 100%;
     width: auto;
     margin: auto;
-    padding: 0;
-    display: flex;
 }
 
 .previous-element-button, .next-element-button {
     height: 100%;
     width: 100%;
-    margin: 0;
     padding: 1em 0.5em ;
     background-color: var(--color-coral);
     border-style: none;
     border-radius: var(--border-radius-16);
-    cursor: pointer;
 }
 
 .previous-element-button::before {
@@ -260,81 +296,63 @@ main {
 }
 
 .previous-element-button:hover, .next-element-button:hover {
-    background-color: var(--color-light-coral);
+    opacity: 70%;
+    cursor: pointer;
+}
+
+.new-art-item-container, .best-selling-art-item-container, .seasonal-art-item-container {
+    display: flex;
+    overflow: scroll;
+    margin: auto;
+    height: 18%;
+    width: 90%;
+    max-width: 90%;
+    min-width: 90%;
+    max-height: 18%;
+    min-height: 18%;
+    padding: 1% 1% 1% 0;
+    border-width: 1rem 1.8rem;
+    border-style: solid;
+    align-items: start;
+    justify-content: start;
+    transform-style: flat;
+    perspective: 600px;
 }
 
 .new-art-item-container {
-    margin: auto;
-    width: 90%;
-    height: auto;
-    padding: 1%;
-    max-width: 90%;
-    min-width: 90%;
     background-color: var(--color-light-grey);
     border-radius: var(--border-radius-24);
-    border-width: 1rem 1.8rem;
-    border-style: solid;
     border-color: var(--color-light-grey);
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    overflow: scroll;
-    transform-style: flat;
-    perspective: 600px;
 }
 
 .best-selling-art-item-container { 
-    margin: auto;
-    width: 90%;
-    height: auto;
-    padding: 1%;
-    max-width: 90%;
-    min-width: 90%;
     background-color: var(--color-coral);
     border-radius: var(--border-radius-24);
-    border-width: 1rem 1.8rem;
-    border-style: solid;
     border-color: var(--color-coral);
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    overflow: scroll;
-    transform-style: flat;
-    perspective: 600px;
 }
 
+
 .seasonal-art-item-container { 
-    margin: auto;
-    width: 90%;
-    height: auto;
-    padding: 1%;
-    max-width: 90%;
-    min-width: 90%;
     background-color: var(--color-electric-blue);
     border-radius: var(--border-radius-24);
-    border-width: 1rem 1.8rem;
-    border-style: solid;
     border-color: var(--color-electric-blue);
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    overflow: scroll;
-    transform-style: flat;
-    perspective: 600px;
 }
 
 
 .art-item {
-    height: 18%;
-    width: 16%;
-    max-width: 16%;
-    min-width: 16%;
-    max-height: 18%;
-    min-height: 18%;
-    align-items: center;
-    margin: 0 1%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: inherit;
+    width: 18%;
+    max-width: 18%;
+    min-width: 18%;
+    max-height: inherit;
+    margin: 0 2% 0 0;
+    flex-direction: column;
+    justify-items: center;
     text-align: center;
-    padding: 1rem;
+    padding: 1%;
     background-color: var(--color-white);
     border-style: solid;
     border-color: var(--color-dark-blue);
@@ -342,20 +360,27 @@ main {
 }
 
 .art-item img {
+    display: block;
+    margin: auto;
     height: 8rem;
     width: auto;
-    box-shadow: 4px 4px 4px var(--color-darker-blue);
-    border-radius: var(--border-radius-16);
+    border-radius: var(--border-radius-24);
+    image-rendering: auto;
 }
 
 .art-item img:hover {
-    box-shadow: 2px 2px 6px var(--color-darker-blue);
+    opacity: 70%;
     cursor: pointer;
 }
 
-.art-desc {
+.art-desc-container {
+    display: block;
     margin: 1rem 0 0 0;
-    padding: 0;
+}
+
+.art-desc {
+    display: block;
+    height: auto;
     text-align: justify;
     font-size: 16.5px;
     font-family: var(--font-secondary);
@@ -363,11 +388,22 @@ main {
     text-align: justify;
 }
 
+.art-price {
+    display: block;
+    height: auto;
+    margin: auto;
+    padding: 0.5rem 0 0 0;
+    font-size: 16.5px;
+    font-family: var(--font-secondary);
+    color: var(--color-dark-blue);
+    text-align: center;
+}
+
 .art-desc::first-letter {
     text-transform: capitalize;
 }
 
-.art-desc:hover {
+.art-desc-container:hover {
     text-decoration: underline;
     text-decoration-color: var(--color-dark-blue);
     text-decoration-thickness: 0.1rem;
@@ -376,13 +412,11 @@ main {
 
 
 .shipping-info-banner {
+    display: flex;
     height: 5rem;
     width: 100%;
-    margin: auto;
-    padding: 0;
-    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: var(--color-wine-red);
     color: var(--color-white);
     font-family: var(--font-secondary);
@@ -390,31 +424,24 @@ main {
 }
 
 .shipping-info-banner .info-banner-statement {
-    margin: auto;
-    padding: 0;
     display: flex;
 }
 
 .info-banner-statement .banner-text-shipping, .info-banner-statement .banner-text-return
 , .info-banner-statement .banner-text-review {
-    margin: auto;
-    padding: 0;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .shipping-icon, .return-icon, .star-review-icon {
+    display: flex;
     height: 1.6rem;
     width: auto;
     margin: auto 0.5rem auto auto;
-    padding: 0;
-    display: inline-flex;
 }
 
 .shipping-icon img, .return-icon img, .star-review-icon img {
     height: auto;
     width: auto;
-    margin: 0;
-    padding: 0;
 }
 
 
@@ -433,24 +460,22 @@ footer {
     border-color: var(--color-light-grey);
     border-style: solid;
     border-width: 3px 0 0 0;
-    justify-content: center;
+    justify-content: space-evenly;
     display: flex;
 }
 
 .about-links-container , .help-links-container , .store-links-container {
+    display: inline-block;
     height: auto;
     width: auto;
     margin: auto;
-    padding: 0;
     justify-content: center;
-    display: inline-block;
 }
 
 .footer-links-bar .about-links-container h4, .footer-links-bar .help-links-container h4,
 .footer-links-bar .store-links-container h4 {
-    margin: 0;
-    padding: 0.6rem;
     display: inline-block;
+    padding: 0.6rem;
     color: var(--color-darker-blue);
     text-align: left;
     font-size: 1.2rem;
@@ -461,8 +486,6 @@ footer {
 
 .about-links-container .about-list, .help-links-container .help-list, .store-links-container .store-list {
     list-style: none;
-    margin: 0;
-    padding: 0;
     justify-content: center;
 }
 
@@ -473,8 +496,6 @@ footer {
 }
 
 .footer-links-bar ul li a {
-    margin: 0;
-    padding: 0;
     display: block;
     color: var(--color-darker-blue);
     font-size: 1rem;
@@ -491,39 +512,35 @@ footer {
 
 
 .footer-brand-links-bar {
+    display: flex;
     height: auto;
     width: auto;
-    margin: 0;
     padding: 0.3rem 0;
     background-color: var(--color-dark-blue);
     justify-content: center;
     align-items: center;
-    display: flex;
 }
 
 .footer-brand-links-bar .svg-logo {
+    display: inline;
     height: 4rem;
     width: auto;
     margin: auto auto auto 5%;
-    padding: 0;
-    display: inline;
     cursor: pointer;
 }
 
 .social-media-links {
+    display: flex;
     height: auto;
     width: auto;
     margin: auto 5% auto auto;
-    padding: 0;
-    display: flex;
 }
 
 .social-media-links .instagram-button, .social-media-links .youtube-button {
+    display: flex;
     height: 2.2rem;
     width: 2.2rem;
     margin: 1.5rem;
-    padding: 0;
-    display: flex;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-24);
@@ -531,34 +548,31 @@ footer {
 }
 
 .instagram-button:hover, .youtube-button:hover {
-    background-color: var(--color-light-grey);
+    background-color: var(--color-lighter-grey);
 }
 
 .youtube-button img {
     height: 65%;
     width: auto;
     margin: auto;
-    padding: 0;
 }
 
 .instagram-button a {
     height: 65%;
     width: auto;
     margin: auto;
-    padding: 0;
 }
 
 .instagram-button a img {
     height: 100%;
     width: auto;
     margin: auto;
-    padding: 0;
 }
 
 .footer-copyright-content {
+    display: flex;
     height: auto;
     width: auto;
-    margin: 0;
     padding: 1rem 1.5rem 1.5rem 0;
     background-color: var(--color-darker-blue);
     border-color: var(--color-lighter-blue);
@@ -566,7 +580,6 @@ footer {
     border-width: 2px 0 0 0;
     text-align: right;
     justify-content: right;
-    display: flex;
 }
 
 .footer-copyright-content small {
@@ -579,7 +592,6 @@ footer {
 .create-account-section {
     height: auto;
     width: 100%;
-    margin: 0;
     padding: 2%;
 }
 
@@ -588,7 +600,6 @@ footer {
     width: 30%;
     max-width: 30%;
     margin: auto;
-    padding: 0;
     border-style: none;
     background-color: var(--color-white);
     border-style: solid;
@@ -598,12 +609,11 @@ footer {
 }
 
 .create-account-fieldset {
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
     max-width: 100%;
-    margin: 0;
-    padding: 0;
     border-style: none;
     text-align: justify;
 }
@@ -612,30 +622,23 @@ footer {
     margin: auto;
     padding: 10px;
     height: auto;
-    width: auto;
-    background-color: var(--color-white);
-    border-radius: var(--border-radius-16);
+    width: 100%;
+    border-width: 0 0 2px 0;
+    border-style: solid;
+    border-color: var(--color-dark-blue);
     text-align: center;
+    justify-content: center;
     z-index: 1;
 }
 
-.create-account-fieldset legend::after {
-    position: absolute;
-    left: 36%;
-    right: 36%;
-    height: 5%;
-    margin: auto;
-    content: "";
-    border-width: 0 0 0.13rem 0;
-    border-style: solid;
-    border-color: var(--color-dark-blue);
+.create-account-fieldset legend::before {
+    content: "🧶";
 }
 
 .name-input-container, .email-input-container, .password-input-container, .desc-container, .techniques-options-container,
 .age-range-container {
     display: block;
     margin: 15px 5%;
-    padding: 0;
     height: auto;
     width: auto;
     text-align: justify;
@@ -646,7 +649,6 @@ footer {
     height: auto;
     width: 100%; 
     margin: auto;
-    padding: 0;
     text-align: justify;
     font-size: 14px;
     font-family: var(--font-secondary);
@@ -710,6 +712,12 @@ footer {
     font-size: 12px;
 }
 
+.techniques-options-container select:focus {
+    outline: var(--color-electric-blue);
+    border: 1.7px solid var(--color-electric-blue);
+    border-radius: var(--border-radius-16);
+}
+
 .techniques-options-container select:hover {
     box-shadow: 2px 2px 4px var(--color-lighter-blue);
     cursor: pointer;
@@ -720,7 +728,7 @@ footer {
     height: auto;
     width: auto;
     margin: 20px auto;
-    padding: 10px 30px;
+    padding: 15px 30px;
     text-align: justify;
     font-size: 16px;
     font-family: var(--font-secondary);
