--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -54,7 +54,7 @@ body {
     align-items: center;
     justify-items: center;
     overflow-X: hidden;
-    background-image: url(../images/yarnBackgroundTexture.svg);
+    background-image: url(../Images/yarnBackgroundTexture.svg);
     background-size: auto;
     background-repeat: repeat;
     background-position: center;
@@ -84,6 +84,96 @@ nav {
     justify-content: space-evenly;
 }
 
+
+.search-bar-container-hidden {
+    display: none;
+    position: absolute;
+    margin: auto;
+    height: 4.8rem;
+    width: 100%;
+    justify-content: center;
+    background-color: var(--color-dark-blue);
+}
+
+.search-bar-container-visible {
+    display: flex;
+    position: absolute;
+    margin: auto;
+    height: 4.8rem;
+    width: 100%;
+    justify-content: center;
+    background-color: var(--color-dark-blue);
+}
+
+.search-bar-input-container {
+    display: flex;
+    position: relative;
+    height: auto;
+    width: 40%;
+    margin: auto;
+    padding: 0.5rem;
+    justify-content: center;
+    background-color: var(--color-white);
+    border-radius: var(--border-radius-16);
+}
+
+.search-bar-button {
+    display: inline;
+    height: 2rem;
+    width: auto;
+    margin: auto 0.5rem auto auto;
+    background-color: var(--color-white);
+    border-style: none;
+    vertical-align: middle;  
+    cursor: pointer;
+}
+
+.close-button {
+    display: inline;
+    height: 2rem;
+    width: auto;
+    margin: auto;
+    background-color: var(--color-white);
+    border-style: none;
+    vertical-align: middle;  
+    cursor: pointer;
+}
+
+.search-bar-button:hover, .close-button:hover {
+    opacity: 70%;
+}
+
+.search-bar-button img, .close-button img {
+    display: inline;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+}
+
+.search-bar-input {
+    display: inline;
+    position: relative;
+    height: auto;
+    width: 80%;
+    padding: 0.5rem;
+    border-style: none;
+    color: var(--color-darker-blue);
+    font-size: 18px;
+}
+
+.search-bar-input:hover {
+    border-style: none;
+    border-radius: var(--border-radius-8);
+    box-shadow: 2px 2px 2px var(--color-light-grey);
+    cursor: pointer;
+}
+
+.search-bar-input:focus {
+    outline: none;
+    border-style: none;
+}
+
+
 .svg-logo {
     display: inline;
     height: 4.8em;
@@ -109,6 +199,7 @@ nav {
     border-style: none;
     border-radius: var(--border-radius-50);
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .account-button {
@@ -120,6 +211,7 @@ nav {
     border-style: none;
     border-radius: var(--border-radius-50);
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .cart-button {
@@ -130,13 +222,13 @@ nav {
     border-style: none;
     border-radius: var(--border-radius-50);
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .search-button img, .account-button img, .cart-button img {
     height: 90%;
     width: auto;
     margin: auto;
-    cursor: pointer;
 }
 
 .account-button:hover , .search-button:hover, .cart-button:hover {
@@ -343,11 +435,12 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     display: flex;
     flex-direction: column;
     position: relative;
-    height: inherit;
+    height: 18%;
     width: 18%;
     max-width: 18%;
     min-width: 18%;
-    max-height: inherit;
+    max-height: 18%;
+    min-height: 18%;
     margin: 0 2% 0 0;
     flex-direction: column;
     justify-items: center;
@@ -359,8 +452,18 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     border-radius: var(--border-radius-16);
 }
 
+.art-item-image-container {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    height: 50%;
+    width: 100%;
+    max-height: 50%;
+    min-height: 50%;
+}
+
 .art-item img {
-    display: block;
+    display: inline-block;
     margin: auto;
     height: 8rem;
     width: auto;
@@ -374,25 +477,37 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-desc-container {
-    display: block;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    overflow: hidden;
+    height: 50%;
+    width: 100%;
+    max-height: 50%;
+    min-height: 50%;
     margin: 1rem 0 0 0;
 }
 
 .art-desc {
     display: block;
-    height: auto;
+    overflow: hidden;
+    overflow-inline:hidden;
+    margin: auto;
+    height: 40%;
+    max-height: 40%;
+    min-height: 40%;
     text-align: justify;
     font-size: 16.5px;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
-    text-align: justify;
 }
 
 .art-price {
     display: block;
-    height: auto;
-    margin: auto;
-    padding: 0.5rem 0 0 0;
+    margin: 0.5rem auto auto auto;
+    height: 60%;
+    max-height: 60%;
+    min-height: 60%;
     font-size: 16.5px;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
@@ -670,7 +785,7 @@ footer {
     cursor: pointer;
 }
 
-.create-account-fieldset input:focus {
+.create-account-fieldset input:focus{
     outline: var(--color-electric-blue);
     border: 1.7px solid var(--color-electric-blue);
     border-radius: var(--border-radius-16);
