--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -62,18 +62,18 @@ body {
 }
 
 header {
+    position: sticky;
+    z-index: 500;
+    display: block;
     width: 100%;
     height: auto;
     top: 0;
     background-color: var(--color-dark-blue);
-    display: block;
-    position: sticky;
-    z-index: 500;
 }
 
 nav {
-    display: flex;
     position: relative;
+    display: flex;
     height: auto;
     width: auto;
     padding: 1.3% 10%;
@@ -86,8 +86,8 @@ nav {
 
 
 .search-bar-container-hidden {
-    display: none;
     position: absolute;
+    display: none;
     margin: auto;
     height: 4.8rem;
     width: 100%;
@@ -96,8 +96,8 @@ nav {
 }
 
 .search-bar-container-visible {
-    display: flex;
     position: absolute;
+    display: flex;
     margin: auto;
     height: 4.8rem;
     width: 100%;
@@ -106,8 +106,8 @@ nav {
 }
 
 .search-bar-input-container {
-    display: flex;
     position: relative;
+    display: flex;
     height: auto;
     width: 40%;
     margin: auto;
@@ -151,8 +151,8 @@ nav {
 }
 
 .search-bar-input {
-    display: inline;
     position: relative;
+    display: inline;
     height: auto;
     width: 80%;
     padding: 0.5rem;
@@ -299,10 +299,10 @@ nav {
 }
 
 li:hover .nav-link-sub-list { /*menú popup que aparece*/
-    display: flex;
     position: absolute;
-    flex-direction: column;
     z-index: 100;
+    display: flex;
+    flex-direction: column;
     transition: 0.5s all;
 }
 
@@ -320,12 +320,13 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .new-art, .best-selling-art, .seasonal-art {
-    height: auto;
+    display: grid;
+    height: 100%;
     width: 90%;
     max-width: 90%;
     min-width: 90%;
     margin: 1rem auto 2rem auto;
-    display: grid;
+   
     text-align: center;
 }
 
@@ -342,7 +343,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     display: flex;
     margin: auto;
     width: 100%;
-    height: auto;
+    height: 100%;
     max-width: 100%;
     min-width: 100%;
     align-items: center;
@@ -353,7 +354,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .previous-element-button-container, .next-element-button-container {
     display: flex;
-    height: 100%;
+    height: 20%;
     width: auto;
     margin: auto;
 }
@@ -395,17 +396,16 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 .new-art-item-container, .best-selling-art-item-container, .seasonal-art-item-container {
     display: flex;
     overflow: scroll;
-    margin: auto;
-    height: 18%;
+    height: auto;
     width: 90%;
     max-width: 90%;
     min-width: 90%;
-    max-height: 18%;
-    min-height: 18%;
+    margin: auto;
     padding: 1% 1% 1% 0;
     border-width: 1rem 1.8rem;
     border-style: solid;
     align-items: start;
+    flex-direction: row;
     justify-content: start;
     transform-style: flat;
     perspective: 600px;
@@ -432,10 +432,9 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 
 .art-item {
-    display: flex;
-    flex-direction: column;
     position: relative;
-    height: 18%;
+    display: flex;
+    height: 100%;
     width: 18%;
     max-width: 18%;
     min-width: 18%;
@@ -453,9 +452,10 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-item-image-container {
-    display: flex;
     position: relative;
+    display: flex;
     flex-direction: column;
+    background-color: var(--color-white);
     height: 50%;
     width: 100%;
     max-height: 50%;
@@ -463,10 +463,10 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-item img {
-    display: inline-block;
+    display: inline;
     margin: auto;
-    height: 8rem;
-    width: auto;
+    height: 8em;
+    width: fit-content;
     border-radius: var(--border-radius-24);
     image-rendering: auto;
 }
@@ -477,9 +477,10 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-desc-container {
-    display: flex;
     position: relative;
+    display: flex;
     flex-direction: column;
+    flex: 0 1 auto;
     overflow: hidden;
     height: 50%;
     width: 100%;
@@ -489,13 +490,17 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-desc {
-    display: block;
-    overflow: hidden;
-    overflow-inline:hidden;
+    display: inline;
+    position: relative;
     margin: auto;
-    height: 40%;
-    max-height: 40%;
-    min-height: 40%;
+    height: 70%;
+    width: 100%;
+    max-height: 70%;
+    min-height: 70%;
+    overflow: scroll;
+    overflow-wrap: break-word;
+    flex: 0 1 50px;
+    background-color: var(--color-white);
     text-align: justify;
     font-size: 16.5px;
     font-family: var(--font-secondary);
@@ -503,11 +508,16 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-price {
-    display: block;
-    margin: 0.5rem auto auto auto;
-    height: 60%;
-    max-height: 60%;
-    min-height: 60%;
+    display: inline;
+    position: relative;
+    z-index: 2;
+    margin: 15px auto auto auto;
+    height: 30%;
+    width: 100%;
+    max-height: 30%;
+    min-height: 30%;
+    flex: 0 1 auto;
+    background-color: var(--color-white);
     font-size: 16.5px;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
@@ -532,19 +542,14 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     width: 100%;
     align-items: center;
     justify-content: space-evenly;
-    background-color: var(--color-wine-red);
+    background-image: linear-gradient(to bottom, var(--color-wine-red), var(--color-wine-red), var(--color-coral));
     color: var(--color-white);
     font-family: var(--font-secondary);
     font-size: 1.2rem;
 }
 
-.shipping-info-banner .info-banner-statement {
+.info-banner-statement {
     display: flex;
-}
-
-.info-banner-statement .banner-text-shipping, .info-banner-statement .banner-text-return
-, .info-banner-statement .banner-text-review {
-    justify-content: space-evenly;
 }
 
 .shipping-icon, .return-icon, .star-review-icon {
@@ -734,6 +739,7 @@ footer {
 }
 
 .create-account-fieldset legend {
+    z-index: 1;
     margin: auto;
     padding: 10px;
     height: auto;
@@ -743,7 +749,6 @@ footer {
     border-color: var(--color-dark-blue);
     text-align: center;
     justify-content: center;
-    z-index: 1;
 }
 
 .create-account-fieldset legend::before {
