--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -320,19 +320,20 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .new-art, .best-selling-art, .seasonal-art {
-    display: grid;
+    display: flex;
     height: 100%;
     width: 90%;
     max-width: 90%;
     min-width: 90%;
-    margin: 1rem auto 2rem auto;
-   
+    flex-direction: column;
+    margin: 2em auto;
     text-align: center;
 }
 
 .new-art-title, .best-selling-art-title, .seasonal-art-title, .create-account-fieldset legend {
-    display: block;
-    margin: 0 0 1rem 0;
+    display: inline;
+    height: auto;
+    margin: auto;
     text-align: center;
     font-size: 1.45rem;
     font-family: var(--font-main);
@@ -341,11 +342,9 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .new-art-carousel, .best-selling-art-carousel, .seasonal-art-carousel {
     display: flex;
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
     height: 100%;
-    max-width: 100%;
-    min-width: 100%;
     align-items: center;
     justify-content: center;
     overflow: hidden;
